# ai-support-chat-multi-agent-multi-agent-pydantic-ai

./: pyproject.toml  remove_logging_list.md
.ai/: ARCHITECTURE.md
.archive/: 6_logging before_logfire_auto_trace.mdc  ARCHITECTURE_b4_removing_storage.md
.cursor/rules/: 1_role_declaration.mdc  2_architecture.mdc  3_python.mdc  4_pydantic.mdc  5_pydantic-ai.mdc  6_logging.mdc  7_security.mdc  86_banned_list.md  8_documentation.mdc  9_command_execution.mdc
.devcontainer/: devcontainer.json  docker-compose.yml
frontend/src/: App.tsx
frontend/src/hooks/: useMetrics.ts
frontend/src/services/: ai.ts
frontend/src/types/: comparison.ts
src/ai_support_agent/: __init__.py  main.py
src/ai_support_agent/agents/: customer_support_agent.py  dataloader_agent.py  product_specialist_agent.py
src/ai_support_agent/api/: app.py  dependencies.py
src/ai_support_agent/config/: __init__.py  config.py
src/ai_support_agent/domain/: agent_responses.py
src/ai_support_agent/services/: __init__.py  chat_service.py  difference_service.py  security.py  tasks.py
src/ai_support_agent/tests/: README.md  __init__.py  conftest.py  conftest.py.bak
src/ai_support_agent/tools/: ai_difference_analyzer.py  compare_processor.py  pdf_comparison_OLD_DO_NOT_USE.py  pdf_processor.py  process_difference.py  product_service.py  prompt_manager.py  transformers.py
src/ai_support_agent/types/: __init__.py  agent.py  base.py  comparison.py  differences.py  pdf.py  product.py
src/data/processed/: comparison_20250213_150022.json  comparison_20250213_151119.json  comparison_20250213_153214.json  comparison_20250213_153446.json  comparison_20250213_153537.json  comparison_20250213_153709.json  comparison_20250213_154332.json  comparison_20250213_154432.json  comparison_20250213_154451.json  comparison_20250213_154615.json  comparison_20250213_154825.json  comparison_20250213_154836.json  comparison_20250213_155005.json  comparison_20250213_160231.json  comparison_20250213_162729.json  comparison_20250214_161720.json  comparison_20250214_203703.json  comparison_20250216_182343.json  comparison_20250217_185146.json  comparison_20250217_185535.json  comparison_20250217_185559.json  comparison_20250217_185638.json  comparison_20250217_190041.json  comparison_20250217_190310.json  comparison_20250217_190630.json  comparison_20250217_190741.json  comparison_20250217_190854.json  comparison_20250217_191057.json  comparison_20250217_191237.json  comparison_20250217_191618.json  comparison_20250217_191803.json  comparison_20250217_191857.json  comparison_20250217_192233.json  comparison_20250217_192543.json  comparison_20250217_193229.json  comparison_20250217_193237.json  comparison_20250217_193512.json  comparison_20250217_195642.json  comparison_20250217_195757.json  comparison_20250217_195801.json  (+4 more)
src/migrations/: 000_init.sql  001_init.sql
src/pattern_enforcer/: __init__.py  enforcer.py  errors.py  monitor.py  validator.py
src/scripts/: test_compare_processor.py  test_pdf_comparison_OLD_DO_NOT_USE.py  test_pdf_processor.py  test_product_specialist.py
src/scripts/migrations/: 20240101000000_create_products_table.sql  20240101000002_create_agent_tables.sql  20240101000003_create_analytics_tables.sql  20240101000004_create_db_functions.sql  20240320000000_create_product_docs_table.sql
src/shared/__tests__/: schema-compatibility.test.ts  (+1 more)
(+34 files in other folders)
